--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,10 @@
 Version 0.5-5
 - feature: initial extraction support of standardized confidence intervals.
+- feature: create Mplus model objects, automatically create and run models using mplusModeler
+- feature: generate code for residual covariance structures for latent growth models using mplusRcov
 - support 6-column output from multiple imputation analyses that contain "rate of missing" column.
 - extract all details of bootstrapped likelihood ratio test.
+- added basic documentation for functions including internal functions
 
 Version 0.5-4
 - feature: readModels extracts warnings and errors.
