--- a/inst/doc/Vignette.Rnw
+++ b/inst/doc/Vignette.Rnw
@@ -291,7 +291,7 @@ output file. Elements of an \lstinline|mplus.model| object include:
   correlations for latent variables from OUTPUT: TECH4.
   \item \lstinline|lcCondMeans|: conditional latent class means, obtained using auxiliary(e) syntax in latent class models
   \item \lstinline|gh5|: a list containing data from the gh5 (graphics) file
-  corresponding to this output. (Requires hdf5 package)
+  corresponding to this output. (Requires rhdf5 package)
 \end{enumerate}
 
 Basic example:
