--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ Version 0.6-2
 - feature: initial support for extracting TECH7 (sample stats within latent classes)
 - feature: initial support for extracting TECH12 (observed versus estimated sample statistics for TYPE=MIXTURE analyses)
 - loosen dependency on relimp and tcltk packages to permit installation and loading of MplusAutomation without these.
+- bugfix: readModels was failing when confidence intervals were in probability scale.
 
 Version 0.6-1
 - bugfix: fixed plyr namespace imports
