--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Version 0.6-2
 - feature: initial support for extracting TECH12 (observed versus estimated sample statistics for TYPE=MIXTURE analyses)
 - loosen dependency on relimp and tcltk packages to permit installation and loading of MplusAutomation without these.
 - bugfix: readModels was failing when confidence intervals were in probability scale.
+- bugfix: readModels failed to extract BIC for some ESTIMATOR=BAYES outputs.
 
 Version 0.6-1
 - bugfix: fixed plyr namespace imports
