--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
 Version 0.6-3
+- featuer: readModels tries hard to extract estimation errors and warnings into $errors and $warnings, respectively.
 - feature: mplusObject tries hard (with a note) to guess variables to include from the dataset if usevariables is missing
 - variable name explicitly mentioned when factors are converted to numeric codes by prepareMplusData.
 - bugfix: mplusModeler only runs the input file it generated in a directory now (thanks to Huashan Chen)
