--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,13 @@
 Version 0.6-3
-- featuer: readModels tries hard to extract estimation errors and warnings into $errors and $warnings, respectively.
+- feature: readModels tries hard to extract estimation errors and warnings into $errors and $warnings, respectively.
 - feature: mplusObject tries hard (with a note) to guess variables to include from the dataset if usevariables is missing
 - variable name explicitly mentioned when factors are converted to numeric codes by prepareMplusData.
 - bugfix: mplusModeler only runs the input file it generated in a directory now (thanks to Huashan Chen)
 - bugfix: remove trailing slash from path in runModels to avoid file.exists bug on Windows.
 - bugfix: only kill mplus.exe processes on Windows when runModels fails
 - added killOnFail parameter for runModels to give user option of whether to kill mplus.exe processes on failure.
+- bugfix: pickup new top-level section marker "Available post-processing tools:"
+- bugfix: residuals output section naming changed.
 
 Version 0.6-2
 - feature: initial support for extracting TECH7 (sample stats within latent classes)
