--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 Version 0.6-4
 - bugfix: matrixExtract was failing to read in Mplus Fortran-style scientific notation (e.g., 1.5533D-06).
+- bugfix: extractParameters_1chunk was failing to read in Base Hazard Parameters sections from output files
 - added extraction of Chi-Square Test of Model Fit for Binary and Ordered Categorical section
 - added extraction of Chi-Square Test for MCAR under the Unrestricted Latent Class Indicator Model section.
 - added new function, SummaryTable() which is a generic interface too create summary tables and output to the console, popup, HTML, LaTeX, or markdown to support a wider variety of reproducible documents.
