--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ Version 0.6-4
 - feature: added extraction of Chi-Square Test of Model Fit for Binary and Ordered Categorical section
 - feature: added extraction of Chi-Square Test for MCAR under the Unrestricted Latent Class Indicator Model section.
 - feature: added extraction of R-SQUARE output
-- feature: support extraction of equality tests of means using the BCH procedure
+- feature: support extraction of equality tests of means using the BCH and DU3STEP procedures
 - feature: support means/intercepts and multiple groups in modification indices
 - bugfix: read parameter level headers of TYPE=THREELEVEL output
 - bugfix: matrixExtract was failing to read in Mplus Fortran-style scientific notation (e.g., 1.5533D-06).
