--- a/NEWS
+++ b/NEWS
@@ -3,14 +3,15 @@ Version 0.6-4
 - feature: added extraction of Chi-Square Test of Model Fit for Binary and Ordered Categorical section
 - feature: added extraction of Chi-Square Test for MCAR under the Unrestricted Latent Class Indicator Model section.
 - feature: added extraction of R-SQUARE output
-- feature: support extraction of equality tests of means using the BCH and DU3STEP procedures
+- feature: support extraction of equality tests of means using the BCH, DCON, and DU3STEP procedures
 - feature: support means/intercepts and multiple groups in modification indices
-- bugfix: read parameter level headers of TYPE=THREELEVEL output
-- bugfix: matrixExtract was failing to read in Mplus Fortran-style scientific notation (e.g., 1.5533D-06).
-- bugfix: extractParameters_1chunk was failing to read in Base Hazard Parameters sections from output files
-- bugfix: matrixExtract gave improper output when column headers were non-unique
-- bugfix: extract class counts properly from Mplus v7.3+, which changed the section headers
-- added new function, SummaryTable() which is a generic interface to create summary tables and output to the console, popup, HTML, LaTeX, or markdown to support a wider variety of reproducible documents.
+- bugfix:  read parameter level headers of TYPE=THREELEVEL output
+- bugfix:  matrixExtract was failing to read in Mplus Fortran-style scientific notation (e.g., 1.5533D-06).
+- bugfix:  extractParameters_1chunk was failing to read in Base Hazard Parameters sections from output files
+- bugfix:  matrixExtract gave improper output when column headers were non-unique
+- bugfix:  extract class counts properly from Mplus v7.3+, which changed the section headers
+- feature: added new function, SummaryTable() which is a generic interface to create summary tables and output to the 
+           console, popup, HTML, LaTeX, or markdown to support a wider variety of reproducible documents.
 
 Version 0.6-3
 - feature: readModels tries hard to extract estimation errors and warnings into $errors and $warnings, respectively.
