--- a/NEWS
+++ b/NEWS
@@ -3,9 +3,11 @@ Version 0.7 (in progress)
 - feature:      mplusObject(), mplusModeler(), update(), and createSyntax() all now accommodate monte carlo simulations in Mplus
 - feature:      initial support for extracting MODEL INDIRECT output. See $indirect element from readModels()
 - feature:      initial support for extracting SAMPSTAT output. See $sampstat element from readModels()
+- feature:      runModels now accepts a single .inp file or a directory as the target
+- notice:       extractModelSummaries and extractModelParameters are deprecated in favor of readModels. These will be removed in future.
 - bugfix:       Support for Mplus v5 confidence intervals.
 - bugfix:       R2 extraction for models with estimates and scale factors alone
-- v8 support :  Handle removal of leading '1' from TECH output row names for parameter vectors (matrixExtract)
+- v8 support:   Handle removal of leading '1' from TECH output row names for parameter vectors (matrixExtract)
 
 Version 0.6-4
 - feature: prepareMplusData() and mplusObject() / mplusModeler() now handle multiply imputed data
