--- a/NEWS
+++ b/NEWS
@@ -11,7 +11,8 @@ Version 0.7 (in progress)
 - bugfix:       Support for Mplus v5 confidence intervals.
 - bugfix:       R2 extraction for models with estimates and scale factors alone
 - bugfix:       Handle outputs using DATA IMPUTATION to impute missing data, then analyze a model in older versions of Mplus
-- bugfix:       Handle parsing input section in older Mplus (v6.12 and before, I believe) where there was no termination statement 
+- bugfix:       Handle parsing input section in older Mplus (v6.12 and before, I believe) where there was no termination statement
+- bugfix:       Extract SRMR from TYPE=THREELEVEL models, if available (Github issue 18) 
 - v8 support:   Handle removal of leading '1' from TECH output row names for parameter vectors (matrixExtract)
 - v8 support:   Extract Prior Posterior Predictive P-Value. See $PriorPostPred_PValue in $summaries
 - v8 support:   Extract Within-Level Standardized Estimates for TWOLEVEL models (ex9.32.out). See $wilevel.standardized in $parameters from readModels().
