--- a/NEWS
+++ b/NEWS
@@ -12,11 +12,14 @@ Version 0.7 (in progress)
 - bugfix:       R2 extraction for models with estimates and scale factors alone
 - bugfix:       Handle outputs using DATA IMPUTATION to impute missing data, then analyze a model in older versions of Mplus
 - bugfix:       Handle parsing input section in older Mplus (v6.12 and before, I believe) where there was no termination statement
-- bugfix:       Extract SRMR from TYPE=THREELEVEL models, if available (Github issue 18) 
+- bugfix:       Extract SRMR from TYPE=THREELEVEL models, if available (Github issue 18)
+- bugfix:       Workaround for missing Within Level header for Categorical Latent Variable section of CINTERVAL output in multilevel mixtures (Github issue 25) 
 - v8 support:   Handle removal of leading '1' from TECH output row names for parameter vectors (matrixExtract)
 - v8 support:   Extract Prior Posterior Predictive P-Value. See $PriorPostPred_PValue in $summaries
-- v8 support:   Extract Within-Level Standardized Estimates for TWOLEVEL models (ex9.32.out). See $wilevel.standardized in $parameters from readModels().
-- v8 support:   Support output for AR(1) output variables labeled &1.
+- v8 support:   Extract Within-Level Standardized Estimates for TWOLEVEL models (ex9.32.out). See $wilevel.standardized in $parameters from readModels()
+- v8 support:   Support output for AR(1) output variables labeled &1
+- v8 support:   Extract Steps section from GPCM IRT output (e.g., ex5.5pcm.out)
+- v8 support:   Extract updated IRT PARAMETERIZATION output, including item discriminations, locations, and categories
 
 Version 0.6-4
 - feature: prepareMplusData() and mplusObject() / mplusModeler() now handle multiply imputed data
