re-roxygenized and updated NEWS

--- a/NEWS
+++ b/NEWS
@@ -17,7 +17,7 @@ Version 0.7 (in progress)
 - bugfix:       Extract SRMR from TYPE=THREELEVEL models, if available (Github issue 18)
 - bugfix:       Workaround for missing Within Level header for Categorical Latent Variable section of CINTERVAL output in multilevel mixtures (Github issue 25)
 - bugfix:       Extract summary statistics for EFA outputs with warning "Too many factors were requested for EFA." (Github issue 45)
-- bugfix:       initial support for mplusObject() to recognize lists of variables: x1-x5 expands to x1, x5, and all variables between, when autov=TRUE (Github issue 37)
+- bugfix:       initial support for mplusObject() to recognize lists of variables: x1-x5 expands to x1, x5, and all variables between, when autov=TRUE (Github issue 37), should also be detected whenever a model is updated via update()
 - bugfix:       Extract summary statistics for EFA outputs with warning "Too many factors were requested for EFA." (Github issue 45)
 - bugfix:       Skip over a parameter section header with no parameter estimates (rare output for growth model)
 - bugfix:       Support latent class output sections that contain non-numeric characters (ex8.15.out: "Latent Class C#1")
