Support residual DSEM outputs containing ^

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 Version 0.7-3
  - feature:     readModels provides initial support for extraction of SUMMARY OF DATA section, including ICCs in 2-level models. See $data_summary.
- - feature:     Allow input files to have .in or .inp extension to increase compatibility with lavaan lavExport. 
+ - feature:     Allow input files to have .in or .inp extension to increase compatibility with lavaan lavExport.
+ - feature:     Extract residual DSEM outputs containing ^ 
 
 Version 0.7-2
  - feature:     A host of new features for mixture modeling (thanks to Caspar van Lissa!). See createMixtures, mixtureSummaryTable, plotMixtures, plotGrowthMixtures, plotLTA.
