Fix invariance testing summary extraction

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ Version 0.7-3
  - feature:     Extract residual DSEM outputs containing ^
  - feature:     Initial support for extraction of RESULTS IN PROBABILITY SCALE output. See $parameters$probability.scale from readModels().
  - bugfix:      Extract modification indices for thresholds 
+ - bugfix:      Abstract invariance testing summary extraction from Caspar van Lissa into a separate function.
 
 Version 0.7-2
  - feature:     A host of new features for mixture modeling (thanks to Caspar van Lissa!). See createMixtures, mixtureSummaryTable, plotMixtures, plotGrowthMixtures, plotLTA.
