--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ Version 0.7-3
  - feature:     Initial support for extraction of RESULTS IN PROBABILITY SCALE output. See $parameters$probability.scale from readModels().
  - bugfix:      Extract modification indices for thresholds 
  - bugfix:      Abstract invariance testing summary extraction from Caspar van Lissa into a separate function.
+ - bugfix:      Fix pred/outcome swap in specific indirect sections
 
 Version 0.7-2
  - feature:     A host of new features for mixture modeling (thanks to Caspar van Lissa!). See createMixtures, mixtureSummaryTable, plotMixtures, plotGrowthMixtures, plotLTA.
