--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ Version 0.7-3
  - feature:     Initial support for extraction of RESULTS IN PROBABILITY SCALE output. See $parameters$probability.scale from readModels().
  - feature:     prepareMplusData can now hash filenames for multiply imputed data. Hashing is done for individual files, so that as long as all files exist, the order can be re-arranged or imputations can be dropped and still no new data needs to be written (closes issue #53).
  - feature:     prepareMplusData now is more efficient at converting datasets to numeric and  utilizes fwrite to increase speed of writing out datasets (closes issue #54).
+ - feature:     new utility function mplusAvailable() attempts to determine whether Mplus is installed and findable on the system.
  - bugfix:      Extract modification indices for thresholds 
  - bugfix:      Abstract invariance testing summary extraction from Caspar van Lissa into a separate function.
  - bugfix:      Fix pred/outcome swap in specific indirect sections
