--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 Version 0.7-4
  - bugfix:      Extract standardized estimates from MONTE CARLO outputs
- - bugfix:      Extract R-SQUARE information from multilevel analyses (where header order is reversed) 
+ - bugfix:      Extract R-SQUARE information from multilevel analyses (where header order is reversed)
+ - bugfix:      Restore accidental section match for PSR subsection that led to TECH8 failure  
 
 Version 0.7-3
  - feature:     Support use of plausible values for factors in BAYES output using SAVE=FSCORES(NIMP) approach
